# sigma2xsiam

./: README.md  convert_rule.py  install.py  pyproject.toml  requirements.txt  rule.yml
cortex/backends /: cortexxsiam.py
pipelines /: cortex_xdm.yml
